--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+cachetools==4.0.0
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+cssselect==1.1.0
+cssutils==1.0.2
+email-to==0.1.0
+Flask==1.1.1
+gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lxml==4.5.0
+Markdown==3.2.1
+MarkupSafe==1.1.1
 meraki==0.90.2
-email==4.0.2
+premailer==3.6.1
+requests==2.23.0
+urllib3==1.25.8
+Werkzeug==1.0.0
