--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,25 @@
-APScheduler==3.6.1
-asn1crypto==0.24.0
+APScheduler==3.6.3
 cachetools==4.0.0
-certifi==2019.6.16
-cffi==1.12.3
+certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
-cryptography==2.7
+click==7.1.1
 cssselect==1.1.0
 cssutils==1.0.2
-dj-database-url==0.5.0
-Django==2.1.15
-django-apscheduler==0.3.0
-django-background-tasks==1.2.0
-django-compat==1.0.15
-django-crispy-forms==1.7.2
-django-extensions==2.2.3
-django-heroku==0.3.1
-djangorestframework==3.10.2
 email-to==0.1.0
-Flask==1.0.2
-Flask-HTTPAuth==3.3.0
-Flask-SQLAlchemy==2.3.2
-gunicorn==19.9.0
-idna==2.7
+Flask==1.1.1
+gunicorn==20.0.4
+idna==2.9
 itsdangerous==1.1.0
-Jinja2==2.10.1
-ldap3==2.6
+Jinja2==2.11.1
 lxml==4.5.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
 meraki==0.90.2
-numpy==1.17.0
-pandas==0.24.2
-Pillow==6.1.0
 premailer==3.6.1
-psycopg2==2.8.3
-pyasn1==0.4.5
-pycountry==18.12.8
-pycparser==2.19
-pydotplus==2.0.2
-pyparsing==2.4.2
-python-dateutil==2.8.0
-python-decouple==3.1
-pytz==2019.1
-requests==2.20.1
-scheduler==1.0.0a1
-six==1.12.0
-SQLAlchemy==1.3.6
-sqlparse==0.3.0
-style==1.1.0
-suds-jurko==0.6
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+six==1.14.0
 tzlocal==2.0.0
-update==0.0.1
-urllib3==1.24.3
-virtualenv==16.7.5
-virtualenvwrapper-win==1.2.5
-Werkzeug==0.15.5
-whitenoise==4.1.3
+urllib3==1.25.8
+Werkzeug==1.0.0
