--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-APScheduler==3.6.3
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
@@ -7,6 +6,7 @@ cssselect==1.1.0
 cssutils==1.0.2
 email-to==0.1.0
 Flask==1.1.1
+Flask-APScheduler==1.11.0
 gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
